OCT REM:springboot整合nacos

--- a/lucky-web/src/main/resources/application.properties
+++ b/lucky-web/src/main/resources/application.properties
@@ -10,3 +10,6 @@ server.port = 8080
 server.servlet.context-path=/lucky
 #如果有前端页面的话，这里可以设置热部署
 server.servlet.jsp.init-parameters.development=true
+#nacos
+nacos.config.server-addr=127.0.0.1:8848
+nacos.discovery.server-addr=127.0.0.1:8848
